--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Righteous&display=swap");
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  background: linear-gradient();
+  font-family: "Bubblegum Sans", cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+button {
+  background-color: darkorange;
+  color: blue;
+  padding: 2em 2em;
+  justify-content: center;
+}
+
+.circles {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.circle {
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 6em;
+  background-color: rgb(218, 209, 209);
+  color: #162433;
+  height: 200px;
+  width: 200px;
+  border: 0.5px solid #162433;
+  margin: 10px;
+  box-shadow: 2px 2px 10px grey;
+}
+.green {
+  background-color: #98fb98;
+}
+.red {
+  background-color: #c97dd8;
+}
+.yellow {
+  background-color: rgb(199, 195, 76);
+}
+.blue {
+  background-color: #8fcbe2;
 }
