--- a/src/index.css
+++ b/src/index.css
@@ -39,19 +39,40 @@ button {
   color: #162433;
   height: 200px;
   width: 200px;
-  border: 0.5px solid #162433;
   margin: 10px;
   box-shadow: 2px 2px 10px grey;
 }
-.green {
-  background-color: #98fb98;
+.active {
+  box-shadow: 0 0 20px greenyellow;
+  border: 20px greenyellow;
 }
-.red {
-  background-color: #c97dd8;
+.close-popup {
+  background-color: grey;
+  color: black;
+  height: 20px;
+  width: 20px;
+  border-radius: 5px;
+  float: right;
 }
-.yellow {
-  background-color: rgb(199, 195, 76);
+.overlay {
+  background-color: rgba(43, 41, 41, 0.9);
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  top: 0;
 }
-.blue {
-  background-color: #8fcbe2;
+.popup {
+  position: relative;
+  background-color: white;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 50%;
+  padding: 2rem;
+  box-shadow: 0 0 5px #333;
+  margin: 0 auto;
 }
