--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,45 @@
 @import url("https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Righteous&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
-  background: linear-gradient();
-  font-family: "Bubblegum Sans", cursive;
+  font-family: "Audiowide", display;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
+  background: linear-gradient(0deg, rgb(85, 84, 84) 0%, rgba(0, 0, 0, 1) 100%);
+  color: #622be2;
+  height: 100vh;
+  width: 100wv;
+}
+h1,
+h2 {
+  font-size: 4em;
+  padding: 0.8em 0 0.4em 0;
+}
+h1::before {
+  content: "";
+  border-bottom: 5px double #622be2;
+  position: absolute;
+  width: 200px;
+  padding-top: 1em;
+  margin-left: -3em;
+}
+h1::after {
+  content: "";
+  border-bottom: 5px double #622be2;
+  position: absolute;
+  padding-top: 1em;
+  width: 200px;
+}
+.text p,
+.overlay p {
+  font-size: 3em;
+  padding-bottom: 1em;
 }
 
 code {
@@ -18,10 +47,21 @@ code {
     monospace;
 }
 button {
-  background-color: darkorange;
-  color: blue;
-  padding: 2em 2em;
+  font-family: "Audiowide", display;
+  font-size: 1.2em;
+  background-color: rgb(32, 32, 32);
+  color: whitesmoke;
+  padding: 1.2em 2em;
+  margin: 1.5em;
+  border-radius: 5px;
   justify-content: center;
+  border: none;
+  box-shadow: 0 0 5px black;
+  transition: all ease-in 0.2s;
+}
+button:hover {
+  box-shadow: 2px 2px 8px #622be2;
+  opacity: 0.9;
 }
 
 .circles {
@@ -35,25 +75,34 @@ button {
   justify-content: center;
   align-items: center;
   font-size: 6em;
-  background-color: rgb(218, 209, 209);
+
   color: #162433;
   height: 200px;
   width: 200px;
   margin: 10px;
-  box-shadow: 2px 2px 10px grey;
+  border: 0.2px solid #444444;
 }
 .active {
   box-shadow: 0 0 20px greenyellow;
   border: 20px greenyellow;
 }
+
+/*  ==== == POPUP part == ====*/
 .close-popup {
   background-color: grey;
   color: black;
-  height: 20px;
-  width: 20px;
-  border-radius: 5px;
-  float: right;
+  height: 30px;
+  width: 30px;
+  border-radius: 2px 0px 2px 2px;
+  padding: 1px;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin: 0;
+  box-shadow: 0 0 0 #622be2;
 }
+
 .overlay {
   background-color: rgba(43, 41, 41, 0.9);
   width: 100vw;
@@ -72,7 +121,6 @@ button {
   left: 0;
   width: 50%;
   height: 50%;
-  padding: 2rem;
+  /*padding: 4rem;*/
   box-shadow: 0 0 5px #333;
-  margin: 0 auto;
 }
