--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,6 @@ button:hover {
   justify-content: center;
   align-items: center;
   font-size: 6em;
-
   color: #162433;
   height: 200px;
   width: 200px;
@@ -121,6 +120,7 @@ circle:active {
   position: fixed;
   left: 0;
   top: 0;
+  z-index: 3;
 }
 .popup {
   position: relative;
@@ -131,4 +131,5 @@ circle:active {
   height: 50%;
   /*padding: 4rem;*/
   box-shadow: 0 0 5px #333;
+  z-index: 10;
 }
