--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  background: linear-gradient(0deg, rgb(85, 84, 84) 0%, rgba(0, 0, 0, 1) 100%);
+  background: linear-gradient(rgb(85, 84, 84) 0%, rgba(0, 0, 0, 1) 100%);
   color: #622be2;
   height: 100vh;
   width: 100wv;
@@ -19,9 +19,9 @@ body {
 h1,
 h2 {
   font-size: 4em;
-  padding: 0.8em 0 0.4em 0;
+  padding: 0.8em 0 0.2em 0;
 }
-h1::before {
+/*h1::before {
   content: "";
   border-bottom: 3px double #622be2;
 
@@ -36,16 +36,11 @@ h1::after {
   position: absolute;
   padding-top: 0.9em;
   width: 200px;
-}
+}*/
 .text p,
 .overlay p {
   font-size: 3em;
   padding-bottom: 1em;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
 button {
   font-family: "Audiowide", display;
@@ -92,6 +87,8 @@ circle:active {
 .active {
   box-shadow: 0 0 20px greenyellow;
   border: 20px greenyellow;
+  background: url("./assets/Group\ 13.svg") center center no-repeat;
+  background-size: 80%;
 }
 
 /*  ==== == POPUP part == ====*/
@@ -129,7 +126,30 @@ circle:active {
   left: 0;
   width: 50%;
   height: 50%;
-  /*padding: 4rem;*/
   box-shadow: 0 0 5px #333;
   z-index: 10;
+}
+
+/* === MULTIMEDIA === */
+@media (max-width: 736px) {
+  h1,
+  h2 {
+    font-size: 2.4em;
+    padding: 0.5em 0 0.1em 0;
+  }
+  .text p,
+  .overlay p {
+    font-size: 2em;
+    padding-bottom: 0.5em;
+  }
+  .circle {
+    font-size: 4em;
+    height: 100px;
+    width: 100px;
+    margin: 15px;
+  }
+  .active {
+    box-shadow: 0 0 10px greenyellow;
+    border: 10px greenyellow;
+  }
 }
