--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  background: linear-gradient(rgb(85, 84, 84) 0%, rgba(0, 0, 0, 1) 100%);
+  background: linear-gradient(0, rgb(66, 65, 65) 0%, rgba(0, 0, 0, 1) 100%);
   color: #622be2;
   height: 100vh;
   width: 100wv;
@@ -81,13 +81,11 @@ button:hover {
   box-shadow: 0 0 10px grey;
   cursor: pointer;
 }
-circle:active {
-  box-shadow: inset 0 0 40px green;
-}
+
 .active {
   box-shadow: 0 0 20px greenyellow;
   border: 20px greenyellow;
-  background: url("./assets/Group\ 13.svg") center center no-repeat;
+  background: url("./assets/pictures/Group_13.svg") center center no-repeat;
   background-size: 80%;
 }
 
