--- a/src/index.css
+++ b/src/index.css
@@ -132,16 +132,16 @@ button:hover {
 @media (max-width: 736px) {
   h1,
   h2 {
-    font-size: 2.4em;
+    font-size: 2em;
     padding: 0.5em 0 0.1em 0;
   }
   .text p,
   .overlay p {
-    font-size: 2em;
+    font-size: 1.8em;
     padding-bottom: 0.5em;
   }
   .circle {
-    font-size: 4em;
+    font-size: 3.2em;
     height: 100px;
     width: 100px;
     margin: 15px;
@@ -149,5 +149,13 @@ button:hover {
   .active {
     box-shadow: 0 0 10px greenyellow;
     border: 10px greenyellow;
+  }
+  button {
+    font-size: 1em;
+    background-color: rgb(32, 32, 32);
+    color: honeydew;
+    padding: 1em 1.5em;
+    margin: 1em;
+    border-radius: 3px;
   }
 }
